Agregamos bordes y cambiamos el titulo

--- a/blog.html
+++ b/blog.html
@@ -8,7 +8,10 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Este es el conteido del blog</h1>
-    <p>Soy un parrafo</p>
+    <div class="contenedor">
+        <h1 id="titulo">Este es el conteido del blog</h1>
+        <p>Soy un parrafo</p>
+    </div>
+    
 </body>
 </html>
