Creamos la cabezera del archivo blog

--- a/blog.html
+++ b/blog.html
@@ -9,6 +9,9 @@
 </head>
 <body>
     <div class="contenedor">
+        <div class="cabecera">
+            <p>Soy una cabecera</p>
+        </div>
         <h1 id="titulo">Este es el conteido del blog</h1>
         <p>Soy un parrafo</p>
     </div>
