--- a/blog.html
+++ b/blog.html
@@ -10,7 +10,13 @@
 <body>
     <div class="contenedor">
         <h1 id="titulo">Este es el conteido del blog</h1>
-        <p>Soy un parrafo</p>
+        <div class="contenido">
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Amet, ducimus?</p>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Amet, ducimus?</p>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Amet, ducimus?</p>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Amet, ducimus?</p>
+        </div>
+        
     </div>
     
 </body>
