Agregue una imagen a la pagina web

--- a/blog.html
+++ b/blog.html
@@ -17,6 +17,9 @@
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Amet, ducimus?</p>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Amet, ducimus?</p>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Amet, ducimus?</p>
+            <p>
+                <img src="imagen.jpg" width="%100">
+            </p>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Amet, ducimus?</p>
         </div>
         
